<resources>
    <string name="app_name">Pizza</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log in</string>
    <string name="clue_email">Email: azamat</string>
    <string name="clue_password">Password: admin</string>
    <string name="choose_txt">Choose the Food you love</string>
    <string name="searchTxt">Search</string>
    <string name="category_txt">Category</string>
    <string name="menu_burger">Burgers</string>

</resources>